<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/full_name_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/full_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/full_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/full_name_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Luke Skywalker" />

    <TextView
        android:id="@+id/height_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name_label" />

    <TextView
        android:id="@+id/height_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/height_label"
        app:layout_constraintTop_toBottomOf="@+id/full_name_text"
        tools:text="172" />

    <TextView
        android:id="@+id/mass_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mass"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_label" />

    <TextView
        android:id="@+id/mass_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/mass_label"
        app:layout_constraintTop_toBottomOf="@+id/height_text"
        tools:text="77" />

</androidx.constraintlayout.widget.ConstraintLayout>