<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/species_name_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/species_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/species_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/species_name_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Human" />

    <TextView
        android:id="@+id/classification_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/classification"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/species_name_label" />

    <TextView
        android:id="@+id/classification_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/classification_label"
        app:layout_constraintTop_toBottomOf="@+id/species_name_label"
        tools:text="mammal" />

    <TextView
        android:id="@+id/average_height_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/average_height"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classification_name" />

    <TextView
        android:id="@+id/average_height_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/average_height_label"
        app:layout_constraintTop_toBottomOf="@+id/classification_name"
        tools:text="180" />

</androidx.constraintlayout.widget.ConstraintLayout>